blocks/hero/hero.css
.hero-container .hero-wrapper {
  max-width: unset;
  padding: 0;
}

.hero {
  position: relative;
  padding: 40px 24px;
  min-height: 300px;
}

.hero h1 {
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
  color: var(--background-color);
}

.hero picture {
  position: absolute;
  z-index: -1;
  inset: 0;
  object-fit: cover;
  box-sizing: border-box;
}

.hero img {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

@media (width >= 900px) {
  .hero {
    padding: 40px 32px;
  }
}

